<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/productName"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemImage"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@string/product_name"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/description"
            android:text="@string/leiras"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/productName"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/price"
            android:text="@string/price"
            android:textColor="@color/design_default_color_secondary"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addToCart"
                android:text="@string/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/delete"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>